# plug-n-chug-clone

./: Cargo.toml
assets/: cup_config.toml  orders.toml  status-bar.wgsl  taps.toml
assets/sprites/: assembly.aseprite  bar-table.aseprite
src/: assets.rs  controls.rs  game.rs  main.rs  orders.rs  taps.rs
src/assets/: toml_loader.rs
src/game/: controls.rs  game_ui.rs  orders.rs  status_bar.rs  taps.rs
src/game/orders/: order_config.rs
src/game/taps/: tap_state.rs
src/taps/: tap_state.rs
