[package]
name = "plug-n-chug-clone"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.29.1"
bevy_asset_loader = "0.22.0"
bevy_rapier2d = "0.28.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
